# quickpod

./: .gitignore  Dockerfile  README.md  pyproject.toml
examples/: cluster.yaml  cluster_e2e_2x3090.yaml  cluster_smoke_e2e.yaml  cluster_smoke_e2e_https.yaml  cluster_smoke_e2e_mtls.yaml  cluster_test_3090.yaml  cluster_train_smoke_e2e_mtls.yaml
examples/mtls_smoke_certs/: .gitignore
k8s/: deployment.yaml
quickpod/: __init__.py  __main__.py  cluster_store.py  graphql_gpus.py  graphql_pod.py  hub_app.py  local_service_log.py  managed_worker.py  monitoring_paths.py  reconciler.py  runpod_client.py  runtime_env.py  secrets.py  serve_child.py  serve_daemon_mgmt.py  serve_runner.py  spec.py  train_runner.py  web_app.py  worker_http.py  worker_pool.py
recipes/: .gitignore  gemma-4-e2b-vllm-mtls-3090.yaml
scripts/: e2e_2pod_failover.py  gen_mtls_certs.sh  smoke_e2e_proxy.py  smoke_train_e2e.py
